--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,19 @@ body {
   max-width: 960px;
 }
 
+.footer {
+   width: 100%;
+  height: 20px;
+  font-size: 10pt;
+  padding: 10px;
+  text-align: center;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+  position: fixed;
+  bottom: 0pt;
+  left: 0pt;
+}
+
 h1,
 h2,
 h3,
